ViTables ChangeLog
==================
** Dec 10, 2008**
	The User's Manual has been updated.

	The documentation browser has been updated.

	The module in charge of application configuration has been updated.

	Fixed a small bug in the Properties dialog.

	Changed the trigger for in-place renaming of nodes in the tree of databases
	pane.

	The Properties dialog has been debugged and improved.

** Dec 09, 2008**
	ANNOUNCE.txt and setup.py have been updated.

	Fixed a bug in scripts/vitables.

	Fixed a small l10n problem.

** Dec 08, 2008**
	Fixed a small bug in insertion of nodes in the tree of databases pane.

** Dec 05, 2008**
	Fixed a subtle bug in the datasets access process.

	A small bug has been fixed.

	File Save As... operation has been debugged.

	Enhanced the render of datasets with just one row/column.

	Fixed a small bug in the synchronisation of the workspace with the tree of
	databases pane.

** Dec 04, 2008**
	A minor problem found in tables queries have been fixed.

	The content of just created filtered tables is now automatically displayed.

	Fixed a bug in the access to datasets with two or more dimensions.

	Nodes copying has been updated: leaves whose dataset is not readable are not
	copied

	Deletion of views tied to overwritten nodes has been implemented.

	The status bar is properly updated now when a node is renamed in the Tree of databases pane.

** Dec 03, 2008**
	The 'Recover last session' feature is fully implemented now.

	Fixed a small bug in the splash screen.

	Added a label in the status bar for displaying info about the node currently
	selected in the Tree of databases pane.

** Dec 02, 2008**
	Implemented the capability for zooming cell contents.

	Dynamic entries under the Windows menu are now checkable and exclusive.

** Nov 30, 2008**
	Fixed a bug in the navigation of huge datasets. Now displayed data is properly
	updated when a slider drag ends and when the table is wheeled.

** Nov 13, 2008 **